fix: resolve layout issues with header and control panel. Add logo.

--- a/static/style.css
+++ b/static/style.css
@@ -4,15 +4,25 @@
     box-sizing: border-box;
 }
 
-html, body {
+html {
+    width: 100%;
+    height: 100%;
     background: var(--bg);
 }
 
 body {
-    margin-top: 68px;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    background: var(--bg);
+}
+
+/* Svelte Container*/
+:global(#svelte-kit-body) {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 :root {
